CMAKE_MINIMUM_REQUIRED (VERSION 2.6.4)

SET( TARGET yajl )

SET( CHEADERS_YAJL_PUBLIC
	${CMAKE_CURRENT_SOURCE_DIR}/yajl/${TARGET}_common.h
	${CMAKE_CURRENT_SOURCE_DIR}/yajl/${TARGET}_gen.h
	${CMAKE_CURRENT_SOURCE_DIR}/yajl/${TARGET}_parse.h
	${CMAKE_CURRENT_SOURCE_DIR}/yajl/${TARGET}_version.h
   )
SET( CHEADERS_YAJL
	${CMAKE_CURRENT_SOURCE_DIR}/${TARGET}_alloc.h
	${CMAKE_CURRENT_SOURCE_DIR}/${TARGET}_buf.h
	${CMAKE_CURRENT_SOURCE_DIR}/${TARGET}_bytestack.h
	${CMAKE_CURRENT_SOURCE_DIR}/${TARGET}_encode.h
	${CMAKE_CURRENT_SOURCE_DIR}/${TARGET}_lex.h
	${CMAKE_CURRENT_SOURCE_DIR}/${TARGET}_parser.h
   )
SET( CFILES_YAJL 
	${CMAKE_CURRENT_SOURCE_DIR}/${TARGET}.c
	${CMAKE_CURRENT_SOURCE_DIR}/${TARGET}_alloc.c
	${CMAKE_CURRENT_SOURCE_DIR}/${TARGET}_buf.c
	${CMAKE_CURRENT_SOURCE_DIR}/${TARGET}_encode.c
	${CMAKE_CURRENT_SOURCE_DIR}/${TARGET}_gen.c
	${CMAKE_CURRENT_SOURCE_DIR}/${TARGET}_lex.c
	${CMAKE_CURRENT_SOURCE_DIR}/${TARGET}_parser.c
	${CMAKE_CURRENT_SOURCE_DIR}/${TARGET}_version.c
   )

SET( DOKU
	TODO
	README
	ChangeLog
	COPYING
   )

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} )

ADD_LIBRARY( yajl-static STATIC ${CFILES_YAJL} )
SET( SOURCES_STATIC ${SOURCES_STATIC} ${CFILES_YAJL} PARENT_SCOPE )

