IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   SET( XCM_LINUX_CFILES
	   ${CMAKE_CURRENT_SOURCE_DIR}/XcmDDC.c
	   ${CMAKE_CURRENT_SOURCE_DIR}/XcmDummy.c
      )
   SET(HAVE_LINUX "#define XCM_HAVE_LINUX 1")
ELSE()
   UNSET(HAVE_LINUX)
ENDIF()
IF( XMU_FOUND )
   SET( XCM_X11_CFILES
	   ${CMAKE_CURRENT_SOURCE_DIR}/Xcm.c
	   ${CMAKE_CURRENT_SOURCE_DIR}/XcmEvents.c
      )
   SET(HAVE_X11 "#define XCM_HAVE_X11 1")
ELSE()
   UNSET(HAVE_X11)
ENDIF()

CONFIGURE_FILE (
	"${CMAKE_CURRENT_SOURCE_DIR}/../include/X11/Xcm/XcmVersion.h.in"
	"${CMAKE_BINARY_DIR}/src/include/X11/Xcm/XcmVersion.h"
	@ONLY
   )

SET( CFILES_OBJECT_CONFIG_PUBLIC
	${CMAKE_CURRENT_SOURCE_DIR}/XcmEdidParse.c
	${XCM_LINUX_CFILES}
	${XCM_X11_CFILES}
   )
SET( CFILES_OBJECT_CONFIG_PUBLIC ${CFILES_OBJECT_CONFIG_PUBLIC} PARENT_SCOPE )
SET( CFILES_OBJECT_CONFIG
	${CFILES_OBJECT_CONFIG_PUBLIC}
   )


SET( SOURCES ${CFILES_OBJECT_CONFIG} )

SET( EXTRA_LIBS ${EXTRA_LIBS} ${XINERAMA_LIBRARIES} ${XRANDR_LIBRARIES}
                ${XMU_LIBRARIES}
                ${XFIXES_LIBRARIES} ${X11_LIBRARIES} )

INCLUDE_DIRECTORIES (
	${CMAKE_CURRENT_SOURCE_DIR}/../X11/Xcm/
        ${CMAKE_BINARY_DIR}/src/include/X11/Xcm/
	)

IF(APPLE)
ENDIF (APPLE)

ADD_LIBRARY( xcm-static STATIC ${SOURCES} )
SET( SOURCES_STATIC ${SOURCES_STATIC} ${SOURCES} PARENT_SCOPE )
TARGET_LINK_LIBRARIES (
   xcm-static
   ${EXTRA_LIBS} )
